--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: weather_app
-description: "A Flutter weather app with animations."
+description: "A new Flutter project."
 publish_to: 'none'
+
 version: 1.0.0+1
 
 environment:
@@ -10,10 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  http: ^1.2.0
   geolocator: ^14.0.2
-  lottie: ^2.3.0
-  intl: ^0.18.1
+  http: ^1.2.0
+  lottie: ^3.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  
   assets:
-    - assets/animations/
+    - assets/
